# lawcite

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  test.yml
docs/: index.md  install.md  output.md  usage.md
docs/assets/: forldreansvarsloven.bib  konkurrenceloven.bib
examples/: all.typ  examples.sh  laws.yml  process_laws.py  process_laws_md.py  test.tex
src/lawcite/cli/: main.py
src/lawcite/core/: create_bibtex.py  extract_metadata.py  fetch_pdf.py  parse_general.py  parse_law.py  pdf2bib.py  save_bibtex.py  save_md.py
tests/: test_basic.py  test_pdf2bib.py  test_save_md.py
