[tool.poetry]
name = "lawcite"
version = "0.1.0"
description = "Tools for working with Danish laws in LaTeX"
authors = ["evid 210122431+evidlabel@users.noreply.github.com"]
license = "MIT"
readme = "README.md"
packages = [{include = "lawcite", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
bibtexparser = "^1.4.1"
requests = "^2.31.0"
pypdf = "^4.3.0"
unidecode = "^1.3.8"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lawcite = "lawcite.cli.main:main"
